Fixed display picture alignment

--- a/assignment.css
+++ b/assignment.css
@@ -29,10 +29,11 @@ svg {
 
 svg.user_image {
 	fill: #6edcea;
+	max-width: 100%;
 }
 
 svg.likes {
-	fill: red;
+	fill: #d20202;
 }
 
 .user_info {
@@ -43,13 +44,18 @@ svg.likes {
 
 .user_info__container {
 	display: flex;
-	gap: 1rem;
+	gap: 0.5rem;
+}
+
+.user_info__display_picture {
+	display: flex;
 	align-items: center;
 }
 
 .user_info__details {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 .user_info__more_details ul {
